Changed Result column to All Pass

--- a/rendered.html
+++ b/rendered.html
@@ -50,38 +50,38 @@
     <table class="results-table summary-table">
         <tr>
             <th>Race</th>
-            <th>Result</th>
+            <th>All Pass?</th>
         </tr>
         <tr class="results-table-row">
             <td>Race 0</td>
-            <td class="summary-result">False</td>
+            <td class="summary-result False">False</td>
         </tr><tr class="results-table-row">
             <td>Race 1</td>
-            <td class="summary-result">False</td>
+            <td class="summary-result False">False</td>
         </tr><tr class="results-table-row">
             <td>Race 2</td>
-            <td class="summary-result">False</td>
+            <td class="summary-result False">False</td>
         </tr><tr class="results-table-row">
             <td>Race 3</td>
-            <td class="summary-result">False</td>
+            <td class="summary-result False">False</td>
         </tr><tr class="results-table-row">
             <td>Race 4</td>
-            <td class="summary-result">False</td>
+            <td class="summary-result False">False</td>
         </tr><tr class="results-table-row">
             <td>Race 5</td>
-            <td class="summary-result">False</td>
+            <td class="summary-result False">False</td>
         </tr><tr class="results-table-row">
             <td>Race 6</td>
-            <td class="summary-result">False</td>
+            <td class="summary-result False">False</td>
         </tr><tr class="results-table-row">
             <td>Race 7</td>
-            <td class="summary-result">False</td>
+            <td class="summary-result False">False</td>
         </tr><tr class="results-table-row">
             <td>Race 8</td>
-            <td class="summary-result">False</td>
+            <td class="summary-result False">False</td>
         </tr><tr class="results-table-row">
             <td>Race 9</td>
-            <td class="summary-result">False</td>
+            <td class="summary-result False">False</td>
         </tr>
     </table>
     
@@ -93,15 +93,15 @@
 <table class="results-table summary-table">
     <tr>
         <th>Model</th>
-        <th>Result</th>
+        <th>All Pass?</th>
     </tr>
 
     <tr class="results-table-row">
         <td>mustang</td>
-        <td class="summary-result">True</td>
+        <td class="summary-result True">True</td>
     </tr><tr class="results-table-row">
         <td>fiesta</td>
-        <td class="summary-result">False</td>
+        <td class="summary-result False">False</td>
     </tr>
 
 </table>
@@ -598,15 +598,15 @@ tests\test_main.py:19: AssertionError</div>
 <table class="results-table summary-table">
     <tr>
         <th>Model</th>
-        <th>Result</th>
+        <th>All Pass?</th>
     </tr>
 
     <tr class="results-table-row">
         <td>mustang</td>
-        <td class="summary-result">True</td>
+        <td class="summary-result True">True</td>
     </tr><tr class="results-table-row">
         <td>fiesta</td>
-        <td class="summary-result">False</td>
+        <td class="summary-result False">False</td>
     </tr>
 
 </table>
@@ -1139,15 +1139,15 @@ tests\test_main.py:19: AssertionError</div>
 <table class="results-table summary-table">
     <tr>
         <th>Model</th>
-        <th>Result</th>
+        <th>All Pass?</th>
     </tr>
 
     <tr class="results-table-row">
         <td>mustang</td>
-        <td class="summary-result">True</td>
+        <td class="summary-result True">True</td>
     </tr><tr class="results-table-row">
         <td>fiesta</td>
-        <td class="summary-result">False</td>
+        <td class="summary-result False">False</td>
     </tr>
 
 </table>
@@ -1662,15 +1662,15 @@ tests\test_main.py:19: AssertionError</div>
 <table class="results-table summary-table">
     <tr>
         <th>Model</th>
-        <th>Result</th>
+        <th>All Pass?</th>
     </tr>
 
     <tr class="results-table-row">
         <td>mustang</td>
-        <td class="summary-result">True</td>
+        <td class="summary-result True">True</td>
     </tr><tr class="results-table-row">
         <td>fiesta</td>
-        <td class="summary-result">False</td>
+        <td class="summary-result False">False</td>
     </tr>
 
 </table>
@@ -2185,15 +2185,15 @@ tests\test_main.py:19: AssertionError</div>
 <table class="results-table summary-table">
     <tr>
         <th>Model</th>
-        <th>Result</th>
+        <th>All Pass?</th>
     </tr>
 
     <tr class="results-table-row">
         <td>mustang</td>
-        <td class="summary-result">True</td>
+        <td class="summary-result True">True</td>
     </tr><tr class="results-table-row">
         <td>fiesta</td>
-        <td class="summary-result">False</td>
+        <td class="summary-result False">False</td>
     </tr>
 
 </table>
@@ -2672,15 +2672,15 @@ tests\test_main.py:19: AssertionError</div>
 <table class="results-table summary-table">
     <tr>
         <th>Model</th>
-        <th>Result</th>
+        <th>All Pass?</th>
     </tr>
 
     <tr class="results-table-row">
         <td>mustang</td>
-        <td class="summary-result">True</td>
+        <td class="summary-result True">True</td>
     </tr><tr class="results-table-row">
         <td>fiesta</td>
-        <td class="summary-result">False</td>
+        <td class="summary-result False">False</td>
     </tr>
 
 </table>
@@ -3195,15 +3195,15 @@ tests\test_main.py:19: AssertionError</div>
 <table class="results-table summary-table">
     <tr>
         <th>Model</th>
-        <th>Result</th>
+        <th>All Pass?</th>
     </tr>
 
     <tr class="results-table-row">
         <td>mustang</td>
-        <td class="summary-result">True</td>
+        <td class="summary-result True">True</td>
     </tr><tr class="results-table-row">
         <td>fiesta</td>
-        <td class="summary-result">False</td>
+        <td class="summary-result False">False</td>
     </tr>
 
 </table>
@@ -3700,15 +3700,15 @@ tests\test_main.py:19: AssertionError</div>
 <table class="results-table summary-table">
     <tr>
         <th>Model</th>
-        <th>Result</th>
+        <th>All Pass?</th>
     </tr>
 
     <tr class="results-table-row">
         <td>mustang</td>
-        <td class="summary-result">True</td>
+        <td class="summary-result True">True</td>
     </tr><tr class="results-table-row">
         <td>fiesta</td>
-        <td class="summary-result">False</td>
+        <td class="summary-result False">False</td>
     </tr>
 
 </table>
@@ -4205,15 +4205,15 @@ tests\test_main.py:19: AssertionError</div>
 <table class="results-table summary-table">
     <tr>
         <th>Model</th>
-        <th>Result</th>
+        <th>All Pass?</th>
     </tr>
 
     <tr class="results-table-row">
         <td>mustang</td>
-        <td class="summary-result">True</td>
+        <td class="summary-result True">True</td>
     </tr><tr class="results-table-row">
         <td>fiesta</td>
-        <td class="summary-result">False</td>
+        <td class="summary-result False">False</td>
     </tr>
 
 </table>
@@ -4692,15 +4692,15 @@ tests\test_main.py:19: AssertionError</div>
 <table class="results-table summary-table">
     <tr>
         <th>Model</th>
-        <th>Result</th>
+        <th>All Pass?</th>
     </tr>
 
     <tr class="results-table-row">
         <td>mustang</td>
-        <td class="summary-result">True</td>
+        <td class="summary-result True">True</td>
     </tr><tr class="results-table-row">
         <td>fiesta</td>
-        <td class="summary-result">False</td>
+        <td class="summary-result False">False</td>
     </tr>
 
 </table>
