changed first column of summary tables to sort using strings

--- a/rendered.html
+++ b/rendered.html
@@ -34,7 +34,7 @@
             <table class="results-table summary-table">
                 <thead>
                     <tr>
-                        <th class="sortable numeric">random_seed</th>
+                        <th class="sortable custom">random_seed</th>
                         <th class="sortable numeric">Pass %</th>
                         <th class="sortable numeric">Total Passed Tests</th>
                         <th class="sortable numeric">Total Skipped Tests</th>
@@ -177,7 +177,7 @@
             <table class="results-table summary-table">
                 <thead>
                     <tr>
-                        <th class="sortable numeric">model</th>
+                        <th class="sortable custom">model</th>
                         <th class="sortable numeric">Pass %</th>
                         <th class="sortable numeric">Total Passed Tests</th>
                         <th class="sortable numeric">Total Skipped Tests</th>
@@ -665,7 +665,7 @@ tests\test_main.py:19: AssertionError</div>
             <table class="results-table summary-table">
                 <thead>
                     <tr>
-                        <th class="sortable numeric">model</th>
+                        <th class="sortable custom">model</th>
                         <th class="sortable numeric">Pass %</th>
                         <th class="sortable numeric">Total Passed Tests</th>
                         <th class="sortable numeric">Total Skipped Tests</th>
@@ -1189,7 +1189,7 @@ tests\test_main.py:19: AssertionError</div>
             <table class="results-table summary-table">
                 <thead>
                     <tr>
-                        <th class="sortable numeric">model</th>
+                        <th class="sortable custom">model</th>
                         <th class="sortable numeric">Pass %</th>
                         <th class="sortable numeric">Total Passed Tests</th>
                         <th class="sortable numeric">Total Skipped Tests</th>
@@ -1695,7 +1695,7 @@ tests\test_main.py:19: AssertionError</div>
             <table class="results-table summary-table">
                 <thead>
                     <tr>
-                        <th class="sortable numeric">model</th>
+                        <th class="sortable custom">model</th>
                         <th class="sortable numeric">Pass %</th>
                         <th class="sortable numeric">Total Passed Tests</th>
                         <th class="sortable numeric">Total Skipped Tests</th>
@@ -2201,7 +2201,7 @@ tests\test_main.py:19: AssertionError</div>
             <table class="results-table summary-table">
                 <thead>
                     <tr>
-                        <th class="sortable numeric">model</th>
+                        <th class="sortable custom">model</th>
                         <th class="sortable numeric">Pass %</th>
                         <th class="sortable numeric">Total Passed Tests</th>
                         <th class="sortable numeric">Total Skipped Tests</th>
@@ -2671,7 +2671,7 @@ tests\test_main.py:19: AssertionError</div>
             <table class="results-table summary-table">
                 <thead>
                     <tr>
-                        <th class="sortable numeric">model</th>
+                        <th class="sortable custom">model</th>
                         <th class="sortable numeric">Pass %</th>
                         <th class="sortable numeric">Total Passed Tests</th>
                         <th class="sortable numeric">Total Skipped Tests</th>
@@ -3177,7 +3177,7 @@ tests\test_main.py:19: AssertionError</div>
             <table class="results-table summary-table">
                 <thead>
                     <tr>
-                        <th class="sortable numeric">model</th>
+                        <th class="sortable custom">model</th>
                         <th class="sortable numeric">Pass %</th>
                         <th class="sortable numeric">Total Passed Tests</th>
                         <th class="sortable numeric">Total Skipped Tests</th>
@@ -3665,7 +3665,7 @@ tests\test_main.py:19: AssertionError</div>
             <table class="results-table summary-table">
                 <thead>
                     <tr>
-                        <th class="sortable numeric">model</th>
+                        <th class="sortable custom">model</th>
                         <th class="sortable numeric">Pass %</th>
                         <th class="sortable numeric">Total Passed Tests</th>
                         <th class="sortable numeric">Total Skipped Tests</th>
@@ -4153,7 +4153,7 @@ tests\test_main.py:19: AssertionError</div>
             <table class="results-table summary-table">
                 <thead>
                     <tr>
-                        <th class="sortable numeric">model</th>
+                        <th class="sortable custom">model</th>
                         <th class="sortable numeric">Pass %</th>
                         <th class="sortable numeric">Total Passed Tests</th>
                         <th class="sortable numeric">Total Skipped Tests</th>
@@ -4623,7 +4623,7 @@ tests\test_main.py:19: AssertionError</div>
             <table class="results-table summary-table">
                 <thead>
                     <tr>
-                        <th class="sortable numeric">model</th>
+                        <th class="sortable custom">model</th>
                         <th class="sortable numeric">Pass %</th>
                         <th class="sortable numeric">Total Passed Tests</th>
                         <th class="sortable numeric">Total Skipped Tests</th>
